# factorio-bot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.txt  PLAN.md  README.md  cliff.toml  codecov.yml  index.html  installer.nsi  justfile  package-lock.json  package.json  release.toml  stats.html  zensical.toml
.cargo/: config.toml
.github/: codecov.yml  installer.nsi  renovate.json  renovate.json5
.github/_workflows/: test.yml
.github/chocolatey/: factorio-bot.nuspec  installer.nsi
.github/workflows/: publish.yml  rust-clippy.yml  semgrep.yml  tauri-publish.yml  tauri-test-on-pr.yml  tauri-test.yml  test.yml
app/: .eslintignore  .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.json  update-package-version.js  vite.config.ts
app/scripts/: build-auto-updater-json.js  merge-auto-updater-json.js  output-signature.js  update-checksum.js  update-package-version.js
app/src/: App.vue  AppConfig.vue  AppFooter.vue  (+8 more)
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: migrated.json
app/src-tauri/src/: cli.rs  context.rs  gui.rs  lib.rs  main.rs  paths.rs  scripting.rs  settings.rs
app/src-tauri/src/cli/: lua.rs  mod.rs  plan.rs  playground.rs  rcon.rs  repl.rs  roll_seed.rs  start.rs  tui.rs
app/src-tauri/src/commands/: instances.rs  io.rs  mod.rs  rcon.rs  rest_api.rs  restapi.rs  script.rs  settings.rs  test.rs  window.rs
app/src-tauri/src/constants/: mod.rs
app/src-tauri/src/gui/: mod.rs
app/src-tauri/src/gui/command/: instances.rs  io.rs  mod.rs  rcon.rs  restapi.rs  script.rs  settings.rs  window.rs
app/src-tauri/src/repl/: dump.rs  factorio.rs  factorio_control.rs  factorio_instance_control.rs  get_setting.rs  gui.rs  mod.rs  quit.rs  rcon.rs  rcon_send.rs  restapi_control.rs  run.rs  run_script.rs  set_setting.rs
backend/: .gitignore  AppSettings.toml  Cargo.toml  build.rs
backend/src/: draw.rs  error.rs  lib.rs  main.rs  types.rs
backend/src/factorio/: entity_graph.rs  factorio_planner.rs  flow_graph.rs  instance_setup.rs  mod.rs  output_parser.rs  output_reader.rs  plan_builder.rs  planner.rs  process_control.rs  rcon.rs  roll_best_seed.rs  task_graph.rs  util.rs  world.rs  ws.rs
backend/src/settings/: types.rs  util.rs
backend/src/web/: graph_tiles.rs  map_tiles.rs  mod.rs  rest_api.rs  server.rs
backend/tests/: common.rs  item-prototype-fixtures.json
cargo-timings/: cargo-timing-20220627T195631Z.html
crates/core/: AppSettings.toml  Cargo.toml  build.rs
crates/core/src/: aabb_quadtree.rs  aabb_quadtree_orig.rs  aabb_quadtree_other.rs  constants.rs  draw.rs  errors.rs  gantt_mermaid.rs  lib.rs  settings.rs  test_utils.rs  types.rs  windows.rs
crates/core/src/data/: config.ini  player-data.json  server-settings.json
crates/core/src/factorio/: entity_graph.rs  factorio_planner.rs  flow_graph.rs  instance_setup.rs  mod.rs  output_parser.rs  output_reader.rs  plan_builder.rs  planner.rs  process_control.rs  rcon.rs  roll_best_seed.rs  tests.rs  util.rs  world.rs  ws.rs
crates/core/src/graph/: entity_graph.rs  flow_graph.rs  mod.rs  task_graph.rs
crates/core/src/plan/: execute.rs  mod.rs  plan_builder.rs  planner.rs
crates/core/src/process/: arrange_windows.rs  instance_setup.rs  interactive_process.rs  io_utils.rs  mod.rs  output_parser.rs  output_reader.rs  process_control.rs
crates/core/src/settings/: mod.rs  types.rs  util.rs
crates/core/tests/: entity-prototype-fixtures.json  item-prototype-fixtures.json  recipes-fixtures.json
crates/lua/: Cargo.toml
crates/lua/src/: lib.rs  lua_plan_builder.rs  lua_rcon.rs  lua_world.rs  plan_builder.rs  planner.rs  roll_best_seed.rs
crates/restapi/: Cargo.toml
crates/restapi/src/: error.rs  lib.rs  rapidoc.html  rest_api.rs  restapi.rs  server.rs  settings.rs  webserver.rs
crates/scripting_lua/: Cargo.toml
crates/scripting_lua/src/: error.rs  lib.rs  lua_docs.rs  lua_plan_builder.rs  lua_rcon.rs  lua_runner.rs  lua_world.rs  roll_best_seed.rs
crates/scripting_lua/src/globals/: globals.rs  mod.rs  plan.rs  rcon.rs  world.rs
crates/scripting_lua/src/wrapper/: lua_rcon.rs  lua_world.rs  mod.rs
crates/scripting_lua/tests/: script.lua  stdout-1.txt  task_graph-1.dot  task_graph-1.md  task_graph-2.dot  task_graph-2.md
crates/scripting_rhai/: Cargo.toml
crates/scripting_rhai/src/: error.rs  lib.rs  rhai_plan_builder.rs  rhai_rcon.rs  rhai_runner.rs
crates/scripting_rune/: Cargo.toml
crates/scripting_rune/src/: error.rs  lib.rs  rune_plan_builder.rs  rune_runner.rs
devguide/: 404.html  architecture.html  howto_release.html  howto_run_ci_locally.html  index.html  intro.html  print.html  searchindex.js  searchindex.json  useful_links.html
doc/: crates.js  search-index.js  settings.html  source-files.js
docs/: LuaGlobals.md  book.toml  index.md
frontend/: .eslintrc.js  .gitignore  LICENSE  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  update-checksum.js  update-package-version.js  vite.config.ts
frontend/src-tauri/: .gitignore  AppSettings.toml  Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: build.rs  cmd.rs  lib.rs  main.rs
frontend/src-tauri/src/app_settings/: mod.rs  types.rs  util.rs
frontend/src-tauri/src/commands/: config.rs  instances.rs  io.rs  mod.rs  rcon.rs  script.rs  settings.rs  test.rs  window.rs
frontend/src-tauri/src/constants/: mod.rs
frontend/src-tauri/src/plugins/: instance_plugin.rs
frontend/src-tauri/src/settings/: util.rs
lua/: index.html  ldoc.css
mods/: mod-list.json
plans/: rcontest.lua
scripts/: api_test.lua  arturh.lua  example.lua  lib.lua  luadoc.lua  multi_client_test.lua  play.lua  pseudocode.txt  rcontest.lua  test.rhai  test_phase_2_1.lua  test_phase_2_2.lua
src/: App.vue  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
updates/: all.json  darwin-x86_64.json  linux-x86_64.json  windows-x86_64.json
userguide/: 404.html  architecture.html  howto_lua_scripting.html  howto_repl.html  howto_setup.html  index.html  intro.html  print.html  searchindex.js  searchindex.json  useful_links.html
(+705 files in other folders)
