[workspace]
members = [
    "app/src-tauri",
    "crates/*"
]
resolver = "2"

[workspace.metadata.release]
tag-name = "release-v{{version}}"
shared-version = true
consolidate-commits = true
consolidate-pushes = true
publish = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s" # "s": optimize for binary size
