[package]
name = "factorio-bot-backend"
version = "0.2.0-alpha"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2018"

[dependencies]
rand = "^0.8.4"
rcon = "^0.3.1"
bb8 = "^0.7.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
clap = "2"
config = "0.10.1"
webbrowser = "0.5.5"
pathfinding = "2.0.4"
paris = { version = "1.5", features = ["timestamps", "macros"] }
color-eyre = "0.5.1"
petgraph = { version = "0.5.1", features = ["all"] }
indicatif = "0.15.0"
err-derive = "0.2.2"
wildmatch = "1.0.11"
image = "0.23.7"
imageproc = "0.21.0"
rusttype = "0.9.2"
factorio-blueprint = "0.1.1"
anyhow = "1.0"
num-traits = "^0.2"
async-trait = "0.1.36"
async-std = { version = "1.9.0", features=["attributes"] }
noisy_float = { version = "0.1.12", features = ["serde-1"] }
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"]}
enum-primitive-derive = "0.2.1"
unicode-segmentation = "1.6.0"
strum = "0.19.2"
strum_macros = "0.19.2"
aabb-quadtree = "0.2.0"
dashmap = "3.11.10"
euclid = "0.19.*"
smallvec = "*"
base64 = "0.12.3"
rlua = "0.17.0"
rlua_serde = "0.4.0"
ptree = "0.3.0"
rlua-async = "0.4.0"
itertools = "0.9.0"
human-sort = "0.2.2"
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
zip = "0.5"
#
#[target.'cfg(unix)'.dependencies]
#
#[target.'cfg(windows)'.dependencies]