[package]
name = "factorio-bot"
version = "0.2.9"
description = "a cross-platform factorio bot platform"
authors = [ "Artur Hallmann <arturh@arturh.de>" ]
license = "MIT"
repository = ""
default-run = "factorio-bot"
edition = "2021"

[package.metadata.release]
publish = false
tag-name = "v{{version}}"

[dependencies]
factorio-bot-core = { path = "../../crates/core" }
factorio-bot-restapi = { path = "../../crates/restapi", optional = true }
factorio-bot-scripting-rune = { path = "../../crates/scripting_rune", optional = true }
factorio-bot-scripting-rhai = { path = "../../crates/scripting_rhai", optional = true }
factorio-bot-scripting-lua = { path = "../../crates/scripting_lua", optional = true }
# gui
tauri = { version = "1.0.0-rc.14", features = ["api-all"], optional = true }

# async
tokio = { version = "^1.19", features = ["full", "tracing"] }
console-subscriber = { version = "^0.1", optional = true }

# serializing / deserializing
serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "^1.0"
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
config = "^0.13"
toml = "^0.5"

# cli
clap = {version = "^3.1", optional = true }
clap_complete = {version = "^3.1", optional = true }

# repl
reedline-repl-rs = { version = "1.0.2", optional = true }

# logs
paris = { version = "^1.5", features = ["timestamps", "macros"] }
color-eyre = "^0.6"
miette = {version = "^4.7", features = ["fancy"] }
thiserror = "^1.0"

# utils
open = "^2.1"
dirs-next = "2.0.0"
port_scanner = "*"
parking_lot = "^0.12"

[build-dependencies]
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
factorio-bot-core = { path = "../../crates/core" }
factorio-bot-restapi = { path = "../../crates/restapi", optional = true }
tauri-build = { version = "1.0.0-rc.12", features = [], optional = true }
serde = { version = "^1.0", features = [ "derive" ] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["gui", "restapi", "lua", "cli", "repl"]
custom-protocol = ["tauri/custom-protocol", "dep:tauri-build"] # required because of hard coded [tauri_cli] Command `cargo  build --features=custom-protocol --release`
gui = ["custom-protocol"]
cli = ["dep:clap", "dep:clap_complete"]
restapi = ["dep:factorio-bot-restapi"]
rhai = ["dep:factorio-bot-scripting-rhai"]
rune = ["dep:factorio-bot-scripting-rune"]
lua = ["dep:factorio-bot-scripting-lua"]
repl = ["reedline-repl-rs/async"]
tokio-console = ["dep:console-subscriber"]

[[bin]]
name = "factorio-bot"
path = "src/main.rs"
