[package]
name = "factorio-bot"
version = "0.2.21"
description = "a cross-platform factorio bot platform"
authors = [ "Artur Hallmann <arturh@arturh.de>" ]
license = "MIT"
repository = ""
default-run = "factorio-bot"
edition = "2021"

[package.metadata.release]
publish = false
tag-name = "v{{version}}"

[dependencies]
# workspace
factorio-bot-core = { path = "../../crates/core" }
factorio-bot-restapi = { path = "../../crates/restapi", optional = true }
#factorio-bot-scripting-rune = { path = "../../crates/scripting_rune", optional = true }
#factorio-bot-scripting-rhai = { path = "../../crates/scripting_rhai", optional = true }
factorio-bot-scripting-lua = { path = "../../crates/scripting_lua", optional = true }

# gui
tauri = { version = "1.0.0", features = ["dialog-all", "http-all", "updater"], optional = true }
open = {version = "^3.0", optional = true}
port_scanner = { version = "^0.1.5", optional = true } # scan available port on localhost

# async
tokio = { version = "^1.19", features = ["full", "tracing"] }
console-subscriber = { version = "^0.1", optional = true }

# serializing / deserializing
serde = { version = "^1.0", features = [ "derive" ] }
strum = { version = "^0.24", features = ["derive"] }
toml = "^0.5"

# cli
clap = {version = "^3.2", optional = true }
clap_complete = {version = "^3.2", optional = true }

# repl
reedline-repl-rs = { version = "^1.0.2", optional = true }

# other
color-eyre = "^0.6" # colorful human oriented error reports via panics
dirs-next = "^2.0.0" # platform-specific standard locations of directories for config, cache and other

[build-dependencies]
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
factorio-bot-core = { path = "../../crates/core" }
factorio-bot-restapi = { path = "../../crates/restapi", optional = true }
factorio-bot-scripting-lua = { path = "../../crates/scripting_lua", optional = true }
tauri-build = { version = "1.0.0", features = [], optional = true }
serde = { version = "^1.0", features = [ "derive" ] }

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1.12"


[features]
default = ["gui", "restapi", "repl", "cli", "lua"]
# name "custom-protocol" is required because of hardcoded tauri_cli `cargo  build --features=custom-protocol --release`
custom-protocol = ["tauri/custom-protocol"] # custom_protocol disables dev mode
gui = ["dep:open", "dep:port_scanner", "tauri", "dep:tauri-build"]
cli = ["dep:clap", "dep:clap_complete"]
restapi = ["dep:factorio-bot-restapi"]
#rhai = ["dep:factorio-bot-scripting-rhai"]
#rune = ["dep:factorio-bot-scripting-rune"]
lua = ["dep:factorio-bot-scripting-lua"]
repl = ["reedline-repl-rs/async"]
tokio-console = ["dep:console-subscriber"]

[[bin]]
name = "factorio-bot" # overwrite binary name
path = "src/main.rs"

