[package]
name = "factorio-bot"
version = "0.2.4-dev"
description = "a cross-platform factorio bot platform"
authors = [ "Artur Hallmann <arturh@arturh.de>" ]
license = "MIT"
repository = "https://github.com/arturh85/factorio-bot/"
default-run = "factorio-bot"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "factorio-bot" # overwrite binary name
path = "src/main.rs"



[package.metadata.release]
publish = false
tag-name = "v{{version}}"
dev-version = true
dev-version-ext = "dev"

[dependencies]
# workspace
factorio-bot-core = { path = "../../crates/core" }
factorio-bot-restapi = { path = "../../crates/restapi", optional = true }
#factorio-bot-scripting-rune = { path = "../../crates/scripting_rune", optional = true }
#factorio-bot-scripting-rhai = { path = "../../crates/scripting_rhai", optional = true }
factorio-bot-scripting-lua = { path = "../../crates/scripting_lua", optional = true }

# gui
tauri = { version = "2", features = ["unstable"], optional = true }
open = {version = "^5.0.0", optional = true}
port_scanner = { version = "^0.1.5", optional = true } # scan available port on localhost

# async
tokio = { version = "1", features = ["full", "tracing"] }
console-subscriber = { version = "0.5", optional = true }

# serializing / deserializing
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.145"
strum = { version = "0.27", features = ["derive"] }
toml = "0.9"

# cli
clap = {version = "4.5.53", optional = true }
clap_complete = {version = "4.5.62", optional = true }

# repl
reedline-repl-rs = { version = "1.3.0", optional = true }

# other
color-eyre = "0.6" # colorful human oriented error reports via panics
dirs-next = "2.0" # platform-specific standard locations of directories for config, cache and other
tauri-plugin-fs = "2.4.3"
tauri-plugin-http = "2.5.3"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"

[build-dependencies]
typescript-definitions = { version = "0.1", package = "typescript-definitions-ufo-patch", features = ["export-typescript"] }
factorio-bot-core = { path = "../../crates/core" }
factorio-bot-restapi = { path = "../../crates/restapi", optional = true }
factorio-bot-scripting-lua = { path = "../../crates/scripting_lua", optional = true }
tauri-build = { version = "2", features = [], optional = true }
serde = { version = "1.0", features = [ "derive" ] }

[target.'cfg(windows)'.build-dependencies]
winres = "^0.1.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"


[features]
default = ["gui", "restapi", "repl", "cli", "lua"]
# name "custom-protocol" is required because of hardcoded tauri_cli `cargo  build --features=custom-protocol --release`
custom-protocol = ["tauri/custom-protocol"] # custom_protocol disables dev mode
gui = ["dep:open", "dep:port_scanner", "tauri", "dep:tauri-build"]
cli = ["dep:clap", "dep:clap_complete"]
restapi = ["dep:factorio-bot-restapi"]
#rhai = ["dep:factorio-bot-scripting-rhai"]
#rune = ["dep:factorio-bot-scripting-rune"]
lua = ["dep:factorio-bot-scripting-lua"]
repl = ["reedline-repl-rs/async"]
tokio-console = ["dep:console-subscriber"]
