[package]
name = "factorio-bot-core"
version = "0.2.24"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
rand = "^0.8"
rcon = { version = "^0.6", features = ["rt-tokio"] }
bb8 = "^0.8"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
config = "^0.13"
pathfinding = "^3.0"
parking_lot = "^0.12"
paris = { version = "^1.5", features = ["timestamps", "macros"] }
color-eyre = "^0.6.1"
petgraph = { version = "^0.6", features = ["serde-1"] }
indicatif = "^0.16"
err-derive = "^0.3"
wildmatch = "^2.1"
image = "^0.24"
imageproc = { version = "0.23.0"}
rusttype = "^0.9"
factorio-blueprint = "^0.3"
include_dir = "^0.7.2"
num-traits = "^0.2"
runas = "^0.2"
async-trait = "^0.1"
tokio = { version = "^1.19", features = ["full", "tracing"] }
noisy_float = { version = "^0.2", features = ["serde"] }
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"]}
enum-primitive-derive = "^0.2"
unicode-segmentation = "^1.9"
strum = { version = "^0.24", features = ["derive"] }
dashmap = {version = "^5.3", features = ["serde"] }
euclid = {version = "^0.22.7", features = ["serde"] }
smallvec = { version = "1.8.1", features = ["serde"] }
base64 = "^0.13"
ptree = "^0.4"
fnv = "^1.0.7"
itertools = "^0.10"
human-sort = "^0.2"
flate2 = "^1.0"
tar = "^0.4"
xz2 = "^0.1"
zip = "^0.6"
toml = "^0.5"
regex = "^1.5"
schemars = { version = "0.8", features = ["preserve_order"] }
rlua = "^0.19"
rlua_serde = { git = "https://github.com/creepinson/rlua_serde" } # fork which is compatible with rlua 0.19
miette = {version = "^5.0", features = ["fancy"] }
thiserror = "^1.0"
futures = "0.3.21"
#
#[target.'cfg(unix)'.dependencies]
#
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.36", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
serde = { version = "^1.0", features = [ "derive" ] }
config_struct = "^0.5"
toml = "*"


[dev-dependencies]
mockall = "0.11.1"
mockall_double = "0.3.0"
