[package]
name = "factorio-bot-core"
version = "0.2.4-dev"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
rand = "^0.8.5"
rcon = { version = "^0.6", features = ["rt-tokio"] }
bb8 = "^0.8.1"
serde = "^1.0.163"
serde_derive = "^1.0.163"
serde_json = "^1.0.96"
config = "^0.13.3"
pathfinding = "^4.2.1"
parking_lot = "^0.12.1"
paris = { version = "^1.5.15", features = ["timestamps", "macros"] }
color-eyre = "^0.6.2"
petgraph = { version = "^0.6.3", features = ["serde-1"] }
indicatif = "^0.16"
err-derive = "^0.3.1"
wildmatch = "^2.1.1"
image = "^0.24.6"
imageproc = { version = "0.23.0"}
rusttype = "^0.9.3"
factorio-blueprint = "^0.3"
include_dir = "^0.7.3"
num-traits = "^0.2.15"
runas = "^1.1.0"
async-trait = "^0.1.68"
tokio = { version = "^1.28.1", features = ["full", "tracing"] }
noisy_float = { version = "^0.2", features = ["serde"] }
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"]}
enum-primitive-derive = "^0.2.2"
unicode-segmentation = "^1.10.1"
strum = { version = "^0.24.1", features = ["derive"] }
dashmap = {version = "^5.4", features = ["serde"] }
euclid = {version = "^0.22.8", features = ["serde"] }
smallvec = { version = "1.10.0", features = ["serde"] }
base64 = "^0.21.2"
ptree = "^0.4"
fnv = "^1.0.7"
itertools = "^0.10.5"
human-sort = "^0.2.2"
flate2 = "^1.0.26"
tar = "^0.4.38"
xz2 = "^0.1.7"
zip = "^0.6.6"
toml = "^0.7.4"
regex = "^1.8.3"
schemars = { version = "0.8", features = ["preserve_order"] }
rlua = "^0.19.4"
rlua_serde = { git = "https://github.com/creepinson/rlua_serde" } # fork which is compatible with rlua 0.19
miette = {version = "^5.9.0", features = ["fancy"] }
thiserror = "^1.0.40"
futures = "0.3.28"
#
#[target.'cfg(unix)'.dependencies]
#
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.45", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
#    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
serde = { version = "^1.0.163", features = [ "derive" ] }
config_struct = "^0.5"
toml = "*"


[dev-dependencies]
mockall = "0.11.4"
mockall_double = "0.3.0"
