[package]
name = "factorio-bot-core"
version = "0.2.4-dev"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
rand = "0.8"
rcon = { version = "0.6", features = ["rt-tokio"] }
bb8 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
config = "0.14"
pathfinding = "4.14"
parking_lot = "0.12"
paris = { version = "1.5", features = ["timestamps", "macros"] }
color-eyre = "0.6"
petgraph = { version = "0.6", features = ["serde-1"] }
indicatif = "0.17"
wildmatch = "2.1"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
factorio-blueprint = "0.3"
include_dir = "0.7"
num-traits = "0.2"
runas = "1.2"
async-trait = "0.1"
tokio = { version = "1", features = ["full", "tracing"] }
noisy_float = { version = "0.2", features = ["serde"] }
typescript-definitions = { version = "0.1", package = "typescript-definitions-ufo-patch", features = ["export-typescript"] }
enum-primitive-derive = "0.3"
unicode-segmentation = "1.12"
strum = { version = "0.26", features = ["derive"] }
dashmap = {version = "6.1", features = ["serde"] }
euclid = {version = "0.22", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
base64 = "0.22"
ptree = "0.5"
fnv = "1.0"
itertools = "0.13"
human-sort = "0.2"
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
zip = "2.2"
toml = "0.8"
regex = "1.11"
schemars = { version = "0.8", features = ["preserve_order"] }
mlua = { version = "0.9", features = ["lua54", "serialize", "macros"] }
miette = {version = "7.4", features = ["fancy"] }
thiserror = "2.0"
futures = "0.3"
#
#[target.'cfg(unix)'.dependencies]
#
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
#    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
serde = { version = "^1", features = [ "derive" ] }
config_struct = "^0.5"
toml = "*"


[dev-dependencies]
mockall = "0.14.0"
mockall_double = "0.3.1"
