[package]
name = "factorio-bot-lua"
version = "0.0.0"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[dependencies]
factorio-bot-core = { path = "../core" }
parking_lot = "^0.11"
tokio = { version = "^1.16", features = ["full"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
dashmap = "^5.0"
gag = "^1.0"
itertools = "^0.10"
rlua = "^0.17" # cannot update to 0.18 because rlua-async 0.4 depends on 0.17
rlua_serde = "^0.4"
rlua-async = "^0.4"
num-traits = "^0.2"
paris = { version = "^1.5", features = ["timestamps", "macros"] }
petgraph = { version = "^0.6", features = ["all"] } # upgrade to 0.6 failed because of ptree
rand = "^0.8"
miette = {version = "^3.3", features = ["fancy"] }
thiserror = "^1.0"
