[package]
name = "factorio-bot-restapi"
version = "0.2.3-dev"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
okapi = { version = "0.7.0-rc.1" }
schemars = { version = "0.8.10", features = ["preserve_order"] }
tokio = { version = "^1.19", features = ["full", "tracing"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
miette = { version = "^5.1", features = ["fancy"] }
thiserror = "^1.0"
num-traits = "^0.2"
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
