[package]
name = "factorio-bot-restapi"
version = "0.2.4-dev"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
okapi = { version = "0.7.0-rc.1" }
schemars = { version = "0.8.16", features = ["preserve_order"] }
tokio = { version = "^1.34.0", features = ["full", "tracing"] }
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.108"
miette = { version = "^5.10.0", features = ["fancy"] }
thiserror = "^1.0.50"
num-traits = "^0.2.17"
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
