[package]
name = "factorio-bot-restapi"
version = "0.2.4-dev"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
rocket = { version = "0.5", features = ["json"] }
rocket_okapi = { version = "0.9", features = ["swagger", "rapidoc"] }
okapi = "0.7"
schemars = { version = "0.9.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"
num-traits = "0.2"
typescript-definitions = { version = "0.1", package = "typescript-definitions-ufo-patch", features = ["export-typescript"] }
