[package]
name = "factorio-bot-scripting-lua"
version = "0.2.4-dev"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
factorio-bot-scripting = { path = "../scripting" }
itertools = "^0.10"
rlua-async = "^0.5"
rlua_serde = { git = "https://github.com/creepinson/rlua_serde" } # fork which is compatible with rlua 0.19
miette = {version = "^5.5", features = ["fancy"] }
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "^1.20", features = ["full", "tracing"] }
