[package]
name = "factorio-bot-scripting-lua"
version = "0.2.4-dev"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
factorio-bot-scripting = { path = "../scripting" }
itertools = "^0.12.0"
mlua = { version = "0.9", features = ["lua54", "serialize", "macros", "async"] }
# rlua_serde = { git = "https://github.com/creepinson/rlua_serde" } # fork which is compatible with rlua 0.19
miette = {version = "^5.10.0", features = ["fancy"] }
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "^1.34.0", features = ["full", "tracing"] }
