[package]
name = "factorio-bot-scripting-rhai"
version = "0.2.16"
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
factorio-bot-scripting = { path = "../scripting" }
rhai = {version = "1.7.0", features = ["serde", "metadata", "debugging", "sync"]}
# for error.rs
miette = {version = "^4.7", features = ["fancy"] }
thiserror = "^1.0"

[dev-dependencies]
tokio = { version = "^1.19", features = ["full", "tracing"] }
