[package]
name = "factorio-bot-scripting-rhai"
version = "0.2.14"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
factorio-bot-scripting = { path = "../scripting" }
rhai = {version = "1.8.0", features = ["serde", "metadata", "debugging", "sync"]}
# for error.rs
miette = {version = "^5.1", features = ["fancy"] }
thiserror = "^1.0"

[dev-dependencies]
tokio = { version = "^1.19", features = ["full", "tracing"] }
