[package]
name = "factorio-bot-scripting-rune"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorio-bot-core = { path = "../core" }
factorio-bot-scripting = { path = "../scripting" }
rune = {version = "0.12.0", features = []}

[dev-dependencies]
tokio = { version = "^1.19", features = ["full", "tracing"] }