[package]
name = "factorio-bot-scripting-rune"
version = "0.2.1"
edition = "2021"

[package.metadata.release]
tag = false
push = false
publish = false

[dependencies]
factorio-bot-core = { path = "../core" }
factorio-bot-scripting = { path = "../scripting" }
rune = {version = "0.12.0", features = []}

[dev-dependencies]
tokio = { version = "^1.19", features = ["full", "tracing"] }
