[package]
name = "factorio-bot"
version = "0.1.0"
description = "a cross-platform factorio bot"
authors = [ "Artur Hallmann <arturh@arturh.de>" ]
license = "MIT"
repository = ""
default-run = "factorio-bot"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
factorio-bot-backend = { path = "../../backend/" }
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "factorio-bot"
path = "src/main.rs"
