[package]
name = "factorio-bot"
version = "0.1.0"
description = "a cross-platform factorio bot platform"
authors = [ "Artur Hallmann <arturh@arturh.de>" ]
license = "MIT"
repository = ""
default-run = "factorio-bot"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "^1.0"
config = "^0.11"
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
async-std = { version = "^1.9", features= ["attributes"] }
factorio-bot-backend = { path = "../../backend/" }
serde = { version = "^1.0", features = [ "derive" ] }
tauri = { version = "^1.0.0-beta.5", features = ["cli", "fs-read-binary-file", "fs-read-text-file", "fs-write-file", "shell-execute", "shell-open"] }
toml = "*"
anyhow = "^1.0"

[build-dependencies]
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
factorio-bot-backend = { path = "../../backend/" }
tauri-build = { version = "^1.0.0-beta.3" }
serde = { version = "^1.0", features = [ "derive" ] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "factorio-bot"
path = "src/main.rs"
